--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           <form action="" class="form" method="POST">
             <div class="box names_box">
               <div class="name_box">
-                <p class="form-title name-title">名字</p>
+                <p class="form-title name-title required">名字</p>
                 <input type="text" name="lastname"  class="input form_name_input" required>
               </div>
               <div class="name_box">
-                <p class="form-title name-title">名前</p>
+                <p class="form-title name-title required">名前</p>
                 <input type="text" name="firstname"  class="input form_name_input" required>
               </div>
             </div>
@@ -51,7 +51,7 @@
               </div>
             </div>
             <div class="box">
-              <p class="form-title mail-title">Eメール</p>
+              <p class="form-title mail-title required">Eメール</p>
               <input type="email" name="mail" class="input mail_input" placeholder=" ex) hoge@example.com" required>
             </div>
             <div class="box">
@@ -59,11 +59,11 @@
               <input type="tel" name="phonenumber" class="input phonenumber_input" placeholder=" ex) 09012345678">
             </div>
             <div class="box">
-              <p class="form-title password-title">パスワード</p>
+              <p class="form-title password-title required">パスワード</p>
               <input type="password" name="password" class="input password_input" required>
             </div>
             <div class="box">
-              <p class="form-title password-title">パスワード(確認用)</p>
+              <p class="form-title password-title required">パスワード(確認用)</p>
               <input type="password" name="password2" class="input password_input" required>
             </div>
             <div class="box checkbox_course">
