--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div class="box names_box">
               <div class="name_box">
                 <p class="form-title name-title required">名字</p>
-                <input type="text" name="lastname"  class="input form_name_input" required>
+                <input type="text" name="lastname"  class="input" required>
               </div>
               <div class="name_box">
                 <p class="form-title name-title required">名前</p>
-                <input type="text" name="firstname"  class="input form_name_input" required>
+                <input type="text" name="firstname"  class="input" required>
               </div>
             </div>
             <div class="box">
